# s-ide-v1

./: .capabilitiesignore  .ghci  .gitattributes  .gitignore  .replit  .replitignore  CHANGELOG.md  Handbook.md  README.md  churchMachine  churchMachine.hs  church_machine_test.vcd  church_top_test.vcd  gunicorn_config.py  landing.html  main.hs  metaMachine.hs  package.json  playwright.config.js  pyproject.toml  replit.md  replit.nix  requirements.txt  toPdfViaTempFile24075-0.source  unified_server.py
.agents/: agent_assets_metadata.toml
Church/: Abstractions.hs  Machine.hs  Primitives.hs  REPL.hs  Types.hs  bernoulli.church
attached_assets/: CLOOMC_Manifesto.md  Pasted--0x677d36a7-label-Fault-Reporter-resident-true-ogt-glob_1781608649841.txt  Pasted--ECO-001-DREAD-DWRITE-Indexed-Addressing-Opcode-Field-W_1781789800046.txt  Pasted--OSS-CAD-Suite-sipantichijk-penguin-church-fpga-nextpnr_1773509708095.txt  Pasted--OSS-CAD-Suite-venv-church-sipantichijk-penguin-Downloa_1777988121243.txt  Pasted--OSS-CAD-Suite-venv-church-sipantichijk-penguin-Downloa_1778078711117.txt  Pasted--OSS-CAD-Suite-venv-church-sipantichijk-penguin-Downloa_1778079136615.txt  Pasted--OSS-CAD-Suite-venv-church-sipantichijk-penguin-Downloa_1779457472346.txt  Pasted--OSS-CAD-Suite-venv-church-sipantichijk-penguin-Downloa_1779460597531.txt  Pasted--OSS-CAD-Suite-venv-church-sipantichijk-penguin-Downloa_1779461485590.txt  Pasted--OSS-CAD-Suite-venv-church-sipantichijk-penguin-Downloa_1779464509311.txt  Pasted--OSS-CAD-Suite-venv-church-sipantichijk-penguin-Downloa_1779465746198.txt  (+211 more)
church_sim/: app.js  (+12 more)
(+791 files in other folders)
