[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "amaranth>=0.5.8",
    "bleach>=6.3.0",
    "flask>=3.1.2",
    "flask-dance>=7.1.0",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "pillow>=12.1.0",
    "psycopg2-binary>=2.9.11",
    "pyjwt>=2.10.1",
    "apscheduler>=3.11.2",
    "resend>=2.21.0",
    "fpdf2>=2.8.0",
    "pycryptodome>=3.23.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live: Live HTTP tests against the deployed API (requires network and CLOOMC_API_BASE env var)",
]
